--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/smarty316/final-project--intro-to-internet-programming--cs-275--fall-2022/issues"
   },
-  "homepage": "https://github.com/smarty316/final-project--intro-to-internet-programming--cs-275--fall-2022#readme"
+  "homepage": "https://github.com/smarty316/final-project--intro-to-internet-programming--cs-275--fall-2022#readme",
+  "dependencies": {
+    "browser-sync": "^2.27.10",
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^6.0.0",
+    "gulp-html": "^5.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-stylelint": "^13.0.0",
+    "gulp-uglify": "^3.0.2"
+  }
 }
