--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/smarty316/final-project--intro-to-internet-programming--cs-275--fall-2022#readme",
   "dependencies": {
     "browser-sync": "^2.27.10",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^6.0.0",
     "gulp-html": "^5.0.0",
